--- a/CGSSGuide.xcodeproj/xcshareddata/xcschemes/CGSSGuide.xcscheme
+++ b/CGSSGuide.xcodeproj/xcshareddata/xcschemes/CGSSGuide.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1773A512D21610FF1E93D80BE39401DB"
-               BuildableName = "Pods_CGSSGuide.framework"
-               BlueprintName = "Pods-CGSSGuide"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "1282EE5E1D011A8F0024318C"
+               BuildableName = "CGSSGuide.app"
+               BlueprintName = "CGSSGuide"
+               ReferencedContainer = "container:CGSSGuide.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1282EE5E1D011A8F0024318C"
+            BuildableName = "CGSSGuide.app"
+            BlueprintName = "CGSSGuide"
+            ReferencedContainer = "container:CGSSGuide.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1773A512D21610FF1E93D80BE39401DB"
-            BuildableName = "Pods_CGSSGuide.framework"
-            BlueprintName = "Pods-CGSSGuide"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "1282EE5E1D011A8F0024318C"
+            BuildableName = "CGSSGuide.app"
+            BlueprintName = "CGSSGuide"
+            ReferencedContainer = "container:CGSSGuide.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,6 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1282EE5E1D011A8F0024318C"
+            BuildableName = "CGSSGuide.app"
+            BlueprintName = "CGSSGuide"
+            ReferencedContainer = "container:CGSSGuide.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
