优化更新器 优化更新时界面提示

--- a/CGSSGuide/Info.plist
+++ b/CGSSGuide/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Data Version</key>
+	<dict>
+		<key>Minor</key>
+		<string>0</string>
+		<key>Major</key>
+		<string>1</string>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
