--- a/CGSSGuide/Toolbox/ToolboxList.plist
+++ b/CGSSGuide/Toolbox/ToolboxList.plist
@@ -4,11 +4,19 @@
 <array>
 	<dict>
 		<key>cName</key>
-		<string></string>
+		<string>BirthdayNotificationViewController</string>
 		<key>iconId</key>
-		<string></string>
+		<string>200247</string>
 		<key>title</key>
-		<string></string>
+		<string>偶像生日提醒</string>
+	</dict>
+	<dict>
+		<key>cName</key>
+		<string>CharInfoViewController</string>
+		<key>iconId</key>
+		<string>300151</string>
+		<key>title</key>
+		<string>角色信息查看</string>
 	</dict>
 </array>
 </plist>
