--- a/CGSSGuide/Toolbox/ToolboxList.plist
+++ b/CGSSGuide/Toolbox/ToolboxList.plist
@@ -10,5 +10,13 @@
 		<key>title</key>
 		<string>偶像生日提醒</string>
 	</dict>
+    <dict>
+        <key>cName</key>
+        <string>CharInfoViewController</string>
+        <key>iconId</key>
+        <string>300151</string>
+        <key>title</key>
+        <string>角色信息查询</string>
+    </dict>
 </array>
 </plist>
