生日提醒页面添加 显示当前系统通知是否打开 优化检查更新部分的viewcontroller复用 添加游戏数据的相关类和更新方法 添加lz4解压库 添加fmdb库

--- a/CGSSGuide/Toolbox/ToolboxList.plist
+++ b/CGSSGuide/Toolbox/ToolboxList.plist
@@ -10,13 +10,21 @@
 		<key>title</key>
 		<string>偶像生日提醒</string>
 	</dict>
-    <dict>
-        <key>cName</key>
-        <string>CharInfoViewController</string>
-        <key>iconId</key>
-        <string>300151</string>
-        <key>title</key>
-        <string>角色信息查询</string>
-    </dict>
+	<dict>
+		<key>cName</key>
+		<string>CharInfoViewController</string>
+		<key>iconId</key>
+		<string>300151</string>
+		<key>title</key>
+		<string>角色信息查询</string>
+	</dict>
+	<dict>
+		<key>cName</key>
+		<string>GachaViewController</string>
+		<key>iconId</key>
+		<string>100282</string>
+		<key>title</key>
+		<string>模拟抽卡</string>
+	</dict>
 </array>
 </plist>
