--- a/CGSSGuide/Info.plist
+++ b/CGSSGuide/Info.plist
@@ -24,7 +24,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>8</string>
+	<string>9</string>
 	<key>Data Version</key>
 	<dict>
 		<key>Major</key>
@@ -63,5 +63,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请允许本程序将图片保存至您的相册，随后您也可以在系统设置中随时修改。</string>
 </dict>
 </plist>
