--- a/CGSSGuide/Info.plist
+++ b/CGSSGuide/Info.plist
@@ -13,7 +13,8 @@
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>zh_CN</string>
-		<string>en</string>
+		<string>zh_TW</string>
+		<string>ja</string>
 	</array>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
@@ -24,7 +25,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>Data Version</key>
 	<dict>
 		<key>Major</key>
