--- a/CGSSGuide/Info.plist
+++ b/CGSSGuide/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>Data Version</key>
 	<dict>
 		<key>Major</key>
@@ -33,6 +33,8 @@
 		<key>Minor</key>
 		<string>0</string>
 	</dict>
+	<key>Document Version</key>
+	<integer>1</integer>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
