--- a/CGSSGuide/zh-Hant.lproj/ToolboxList.plist
+++ b/CGSSGuide/zh-Hant.lproj/ToolboxList.plist
@@ -26,5 +26,13 @@
 		<key>title</key>
 		<string>模擬抽卡</string>
 	</dict>
+	<dict>
+		<key>cName</key>
+		<string>EventViewController</string>
+		<key>iconId</key>
+		<string>200206</string>
+		<key>title</key>
+		<string>活動資訊查詢</string>
+	</dict>
 </array>
 </plist>
