--- a/CGSSGuide/ja.lproj/ToolboxList.plist
+++ b/CGSSGuide/ja.lproj/ToolboxList.plist
@@ -32,7 +32,7 @@
 		<key>iconId</key>
 		<string>200206</string>
 		<key>title</key>
-		<string>活动信息查询</string>
+		<string>イベント詳細情報を見る</string>
 	</dict>
 </array>
 </plist>
