--- a/CGSSGuide/Info.plist
+++ b/CGSSGuide/Info.plist
@@ -15,6 +15,7 @@
 		<string>zh_CN</string>
 		<string>zh_TW</string>
 		<string>ja</string>
+		<string>en</string>
 	</array>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
