--- a/CGSSGuide/Settings/ThirdPartyLibraries.plist
+++ b/CGSSGuide/Settings/ThirdPartyLibraries.plist
@@ -68,5 +68,11 @@
 		<key>name</key>
 		<string>SnapKit</string>
 	</dict>
+    <dict>
+        <key>site</key>
+        <string>https://github.com/teodorpatras/EasyTipView</string>
+        <key>name</key>
+        <string>EasyTipView</string>
+    </dict>
 </array>
 </plist>
