update team template

--- a/CGSSGuide/Team/Model/TeamTemplate.plist
+++ b/CGSSGuide/Team/Model/TeamTemplate.plist
@@ -8,8 +8,8 @@
 		<integer>100298</integer>
 		<integer>100398</integer>
 		<integer>100350</integer>
-		<integer>100256</integer>
-		<integer>100372</integer>
+		<integer>100395</integer>
+		<real>100372</real>
 	</array>
 	<key>Cool</key>
 	<array>
