fix that can not open twitter client via feedback - twitter

--- a/CGSSGuide.xcodeproj/xcshareddata/xcschemes/CGSSGuide.xcscheme
+++ b/CGSSGuide.xcodeproj/xcshareddata/xcschemes/CGSSGuide.xcscheme
@@ -63,6 +63,12 @@
             ReferencedContainer = "container:CGSSGuide.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.SQLDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
