--- a/CGSSGuide.xcodeproj/xcshareddata/xcschemes/CGSSGuide.xcscheme
+++ b/CGSSGuide.xcodeproj/xcshareddata/xcschemes/CGSSGuide.xcscheme
@@ -68,6 +68,10 @@
             argument = "-com.apple.CoreData.SQLDebug 1"
             isEnabled = "YES">
          </CommandLineArgument>
+         <CommandLineArgument
+            argument = "-com.apple.CoreData.ConcurrencyDebug 1"
+            isEnabled = "YES">
+         </CommandLineArgument>
       </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
