--- a/CGSSGuide/Settings/ThirdPartyLibraries.plist
+++ b/CGSSGuide/Settings/ThirdPartyLibraries.plist
@@ -8,12 +8,12 @@
 		<key>name</key>
 		<string>FMDB</string>
 	</dict>
-    <dict>
-        <key>site</key>
-        <string>https://github.com/yannickl/DynamicColor</string>
-        <key>name</key>
-        <string>DynamicColor</string>
-    </dict>
+	<dict>
+		<key>site</key>
+		<string>https://github.com/yannickl/DynamicColor</string>
+		<key>name</key>
+		<string>DynamicColor</string>
+	</dict>
 	<dict>
 		<key>site</key>
 		<string>https://github.com/lz4/lz4</string>
@@ -79,6 +79,12 @@
 		<string>https://github.com/teodorpatras/EasyTipView</string>
 		<key>name</key>
 		<string>EasyTipView</string>
+	</dict>
+	<dict>
+		<key>site</key>
+		<string>https://github.com/williamFalcon/SwiftTryCatch</string>
+		<key>name</key>
+		<string>SwiftTryCatch</string>
 	</dict>
 </array>
 </plist>
