--- a/CGSSGuide/Info.plist
+++ b/CGSSGuide/Info.plist
@@ -108,6 +108,10 @@
 			</dict>
 		</dict>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
