--- a/CGSSGuide/ja.lproj/ToolboxList.plist
+++ b/CGSSGuide/ja.lproj/ToolboxList.plist
@@ -34,5 +34,13 @@
 		<key>title</key>
 		<string>イベント詳細情報を見る</string>
 	</dict>
+	<dict>
+		<key>cName</key>
+		<string>ColleagueViewController</string>
+		<key>iconId</key>
+		<string>300310</string>
+		<key>title</key>
+		<string>寻找同僚</string>
+	</dict>
 </array>
 </plist>
