--- a/CGSSGuide/en.lproj/ToolboxList.plist
+++ b/CGSSGuide/en.lproj/ToolboxList.plist
@@ -40,7 +40,7 @@
 		<key>iconId</key>
 		<string>300310</string>
 		<key>title</key>
-		<string>Search Colleague</string>
+		<string>Colleague Finder</string>
 	</dict>
 </array>
 </plist>
