--- a/CGSSGuide/Settings/ThirdPartyLibraries.plist
+++ b/CGSSGuide/Settings/ThirdPartyLibraries.plist
@@ -80,11 +80,11 @@
 		<key>name</key>
 		<string>EasyTipView</string>
 	</dict>
-<!--    <dict>-->
-<!--        <key>site</key>-->
-<!--        <string>https://github.com/krzyzanowskim/CryptoSwift</string>-->
-<!--        <key>name</key>-->
-<!--        <string>CryptoSwift</string>-->
-<!--    </dict>-->
+	<dict>
+		<key>site</key>
+		<string>https://github.com/MailOnline/ImageViewer</string>
+		<key>name</key>
+		<string>ImageViewer</string>
+	</dict>
 </array>
 </plist>
