--- a/DereGuide/Settings/SpecialThanks.plist
+++ b/DereGuide/Settings/SpecialThanks.plist
@@ -2,7 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <!--
    SpecialThanks.plist
-   CGSSGuide
+   DereGuide
 
    Created by zzk on 2017/2/1.
    Copyright (c) 2017年 zzk. All rights reserved.
