--- a/DereGuide/Settings/DataSource.plist
+++ b/DereGuide/Settings/DataSource.plist
@@ -26,5 +26,11 @@
 		<key>name</key>
 		<string>StarlightDeck</string>
 	</dict>
+	<dict>
+		<key>site</key>
+		<string>https://deresute.me</string>
+		<key>name</key>
+		<string>deresute.me</string>
+	</dict>
 </array>
 </plist>
