--- a/DereGuide/ja.lproj/ToolboxList.plist
+++ b/DereGuide/ja.lproj/ToolboxList.plist
@@ -40,7 +40,7 @@
 		<key>iconId</key>
 		<string>300310</string>
 		<key>title</key>
-		<string>寻找同僚</string>
+		<string>同僚募集・探す</string>
 	</dict>
 </array>
 </plist>
