--- a/DereGuide/zh-Hant.lproj/ToolboxList.plist
+++ b/DereGuide/zh-Hant.lproj/ToolboxList.plist
@@ -18,6 +18,14 @@
 		<key>title</key>
 		<string>角色資訊查詢</string>
 	</dict>
+    <dict>
+        <key>cName</key>
+        <string>MusicViewController</string>
+        <key>iconId</key>
+        <string>200294</string>
+        <key>title</key>
+        <string>歌曲信息查询</string>
+    </dict>
 	<dict>
 		<key>cName</key>
 		<string>GachaViewController</string>
