--- a/DereGuide/Base.lproj/ToolboxList.plist
+++ b/DereGuide/Base.lproj/ToolboxList.plist
@@ -20,7 +20,7 @@
 	</dict>
 	<dict>
 		<key>cName</key>
-		<string>MusicViewController</string>
+		<string>SongViewController</string>
 		<key>iconId</key>
 		<string>200294</string>
 		<key>title</key>
