--- a/DereGuide/ja.lproj/ToolboxList.plist
+++ b/DereGuide/ja.lproj/ToolboxList.plist
@@ -48,7 +48,7 @@
 		<key>iconId</key>
 		<string>300310</string>
 		<key>title</key>
-		<string>同僚募集・探す</string>
+		<string>同僚の募集・探す</string>
 	</dict>
 </array>
 </plist>
