--- a/DereGuide/Base.lproj/ToolboxList.plist
+++ b/DereGuide/Base.lproj/ToolboxList.plist
@@ -18,14 +18,14 @@
 		<key>title</key>
 		<string>角色信息查询</string>
 	</dict>
-	<dict>
-		<key>cName</key>
-		<string>SongViewController</string>
-		<key>iconId</key>
-		<string>200294</string>
-		<key>title</key>
-		<string>歌曲信息查询</string>
-	</dict>
+<!--    <dict>-->
+<!--        <key>cName</key>-->
+<!--        <string>SongViewController</string>-->
+<!--        <key>iconId</key>-->
+<!--        <string>200294</string>-->
+<!--        <key>title</key>-->
+<!--        <string>歌曲信息查询</string>-->
+<!--    </dict>-->
 	<dict>
 		<key>cName</key>
 		<string>GachaViewController</string>
