--- a/DereGuide/Settings/ThirdPartyLibraries.plist
+++ b/DereGuide/Settings/ThirdPartyLibraries.plist
@@ -30,7 +30,7 @@
 		<key>site</key>
 		<string>https://github.com/ashleymills/Reachability.swift</string>
 		<key>name</key>
-		<string>Reachability</string>
+		<string>Reachability.swift</string>
 	</dict>
 	<dict>
 		<key>site</key>
