update event pt and high score ranking data source

--- a/DereGuide/Settings/DataSource.plist
+++ b/DereGuide/Settings/DataSource.plist
@@ -22,9 +22,9 @@
 	</dict>
 	<dict>
 		<key>site</key>
-		<string>https://starlight.tachibana.cool</string>
+		<string>https://portal.starlightstage.jp</string>
 		<key>name</key>
-		<string>StarlightDeck</string>
+		<string>Starlight Portal</string>
 	</dict>
 	<dict>
 		<key>site</key>
