a more reliable simulation model

--- a/DereGuide.xcodeproj/xcshareddata/xcschemes/DereGuide.xcscheme
+++ b/DereGuide.xcodeproj/xcshareddata/xcschemes/DereGuide.xcscheme
@@ -29,6 +29,16 @@
       language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "12C2B62720010402006EE7F7"
+               BuildableName = "DereGuideTests.xctest"
+               BlueprintName = "DereGuideTests"
+               ReferencedContainer = "container:DereGuide.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
