--- a/DereGuide/en.lproj/ToolboxList.plist
+++ b/DereGuide/en.lproj/ToolboxList.plist
@@ -18,14 +18,14 @@
 		<key>title</key>
 		<string>Idol Information</string>
 	</dict>
-    <dict>
-        <key>cName</key>
-        <string>SongViewController</string>
-        <key>iconId</key>
-        <string>200294</string>
-        <key>title</key>
-        <string>Music Information</string>
-    </dict>
+	<dict>
+		<key>cName</key>
+		<string>SongViewController</string>
+		<key>iconId</key>
+		<string>200294</string>
+		<key>title</key>
+		<string>Music Information</string>
+	</dict>
 	<dict>
 		<key>cName</key>
 		<string>GachaViewController</string>
@@ -49,6 +49,12 @@
 		<string>300310</string>
 		<key>title</key>
 		<string>Colleague Finder</string>
+	</dict>
+	<dict>
+		<key>cName</key>
+		<string>VLTableViewController</string>
+		<key>title</key>
+		<string>Data Version Log</string>
 	</dict>
 </array>
 </plist>
