--- a/DereGuide/zh-Hans.lproj/ToolboxList.plist
+++ b/DereGuide/zh-Hans.lproj/ToolboxList.plist
@@ -18,14 +18,14 @@
 		<key>title</key>
 		<string>角色信息查询</string>
 	</dict>
-    <dict>
-        <key>cName</key>
-        <string>SongViewController</string>
-        <key>iconId</key>
-        <string>200294</string>
-        <key>title</key>
-        <string>歌曲信息查询</string>
-    </dict>
+	<dict>
+		<key>cName</key>
+		<string>SongViewController</string>
+		<key>iconId</key>
+		<string>200294</string>
+		<key>title</key>
+		<string>歌曲信息查询</string>
+	</dict>
 	<dict>
 		<key>cName</key>
 		<string>GachaViewController</string>
@@ -49,6 +49,12 @@
 		<string>300310</string>
 		<key>title</key>
 		<string>寻找同僚</string>
+	</dict>
+	<dict>
+		<key>title</key>
+		<string>数据更新日志</string>
+		<key>cName</key>
+		<string>VLTableViewController</string>
 	</dict>
 </array>
 </plist>
