--- a/Localizations/DereGuide/zh-Hant.xcloc/Localized Contents/DereGuide/zh-Hant.lproj/ToolboxList.plist
+++ b/Localizations/DereGuide/zh-Hant.xcloc/Localized Contents/DereGuide/zh-Hant.lproj/ToolboxList.plist
@@ -12,20 +12,20 @@
 	</dict>
 	<dict>
 		<key>cName</key>
-		<string>CharInfoViewController</string>
+		<string>CharaTableViewController</string>
 		<key>iconId</key>
 		<string>300151</string>
 		<key>title</key>
 		<string>角色資訊查詢</string>
 	</dict>
-    <dict>
-        <key>cName</key>
-        <string>SongViewController</string>
-        <key>iconId</key>
-        <string>200294</string>
-        <key>title</key>
-        <string>歌曲信息查询</string>
-    </dict>
+	<dict>
+		<key>cName</key>
+		<string>SongViewController</string>
+		<key>iconId</key>
+		<string>200294</string>
+		<key>title</key>
+		<string>歌曲信息查询</string>
+	</dict>
 	<dict>
 		<key>cName</key>
 		<string>GachaViewController</string>
@@ -50,11 +50,11 @@
 		<key>title</key>
 		<string>尋找同僚</string>
 	</dict>
-    <dict>
-        <key>title</key>
-        <string>資料更新日誌</string>
-        <key>cName</key>
-        <string>VLTableViewController</string>
-    </dict>
+	<dict>
+		<key>title</key>
+		<string>資料更新日誌</string>
+		<key>cName</key>
+		<string>VLTableViewController</string>
+	</dict>
 </array>
 </plist>
